--- a/afs/templates/views/components/reports/digital-resource.htm
+++ b/afs/templates/views/components/reports/digital-resource.htm
@@ -66,6 +66,7 @@
                     params: {
                         data: resource,
                         cards: existenceCards,
+                        events: existenceEvents,
                         dataConfig: existenceDataConfig,
                     }
                 }"></div>
