--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -76,8 +76,7 @@
                     name: 'views/components/reports/scenes/substance',
                     params: {
                         data: resource,
-                        cards: substanceCards,
-                        additionalData: additionalData
+                        cards: substanceCards
                     }
                 }"></div>
             </div>
