--- a/afs/templates/views/components/reports/scenes/substance.htm
+++ b/afs/templates/views/components/reports/scenes/substance.htm
@@ -23,27 +23,21 @@
                     <table class="table table-striped" cellspacing="0" width="100%">
                         <thead>
                             <tr class="afs-table-header">
-                                <th>{% trans "Name" %}</th>
                                 <th>{% trans "Type" %}</th>
                                 <th class="min-tabletl">{% trans "Unit" %}</th>
                                 <th class="min-medium">{% trans "Value" %}</th>
                                 <th class="none">{% trans "Highest Possible Value" %}</th>
                                 <th class="none">{% trans "Lowest Possible Value" %}</th>
-                                <th class="none">{% trans "Source" %}</th>
-                                <th class="none">{% trans "Label" %}</th>
                                 <th class="afs-table-control all"></th>
                             </tr>
                         </thead>
                         <tbody data-bind="dataTablesForEach: { data: dimensions, dataTableOptions: dimensionTableConfig }">
                             <tr>
-                                <td data-bind="text: name"></td>
                                 <td data-bind="text: type"></td>
                                 <td data-bind="text: unit"></td>
                                 <td data-bind="text: dimensionValue"></td>
                                 <td data-bind="text: highestValue"></td>
                                 <td data-bind="text: lowestValue"></td>
-                                <td data-bind="text: source"></td>
-                                <td data-bind="text: label"></td>
                                 <td class="afs-table-control">
                                     <div data-bind="if: $parent.cards && $parent.cards.dimension">
                                         <a data-bind="click: function() {$parent.edit(tileid, $parent.cards.dimension)}">
@@ -62,7 +56,7 @@
         </div>
         <!-- /ko -->
     </div>
-</div>
+</div><span></span>
 <div data-bind="if: additionalData" class="afs-report-section">
     <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.additionalData)}" class="fa fa-angle-double-right toggle"></i> {% trans "Additional Data" %}</h2>
     <span data-bind="if: cards.material">
