--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -591,10 +591,15 @@
 } 
 
 .afs-final-step-section {
-    padding: 15px 60px; 
+    padding: 15px 40px; 
     display: flex; 
     flex-direction: column
 }
+
+.afs-final-step-section:first-child {
+    margin-top: -15px;
+}
+
 .afs-final-step-section h5.summary-value {
     font-size: 15px;
 }
@@ -628,4 +633,55 @@
 
 .afs-final-step-block a.summary-value:hover {
     color: #2b547c;
+}
+
+.workflow-component-based-step-wrapper {
+    padding: 20px 20px 0px 20px;
+}
+
+/* .workflow-component-based-step-wrapper .widget-input-label {
+    margin-top: 0px;
+} */
+
+.workflow-component-based-step-wrapper h4 {
+    padding-left: 25px;
+}
+
+.workflow-component-based-step-wrapper .workbench-card-wrapper {
+    border-top: none;
+    margin: -20px -20px -20px -20px;
+    height: calc(100% + 20px);
+}
+
+/* .workflow-component-based-step-wrapper .workbench-card-wrapper .workbench-card-sidepanel {
+    border-top: 1px solid #ddd;
+    margin-top: -1px;
+} */
+
+.workflow-component-based-step-wrapper .iiif-leaflet {
+    background: #fff;
+}
+
+.afs-image-service-instructions {
+    padding-bottom: 8px;
+    padding-left: 28px;
+    margin-top: -8px;
+}
+
+.afs-workflow-required-tag {
+    background: #f2f2f2;
+    border: 1px solid #ddd;
+    color: #454545;
+    margin-left: 1px;
+    padding: 3px 8px;
+}
+
+.afs-sample-name .control-label, i {
+    display: none;
+}
+
+.afs-worfklow-summary-table-header {
+    border-top: none;
+    border-left: none !important;
+    border-right: none;
 }
