--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
@@ -1,9 +1,9 @@
 {% load i18n %}
 <!-- ko if: loading() === false -->
 <div class="final-step">
-    <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
+    <div class="afs-final-step-section">
         <h5 class="summary-value">{% trans 'Related Object' %}</h5>
-        <div style="display: inline-flex; width: inherit; justify-content: space-between;">
+        <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
                     <div class="summary-value" 
@@ -14,7 +14,7 @@
         </div>
         <h5 class="summary-value">{% trans 'Regions' %}</h5>
         <!-- ko foreach: regionInstances -->
-        <div style="display: inline-flex; width: inherit; justify-content: space-between;">
+        <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <a data-bind="attr: { href: $root.urls.resource + '/' + regionResource}" target="_blank">
                     <div class="summary-value" 
@@ -25,9 +25,9 @@
         </div>
         <!-- /ko -->
     </div>
-    <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
+    <div class="afs-final-step-section">
         <h5 class="summary-value">{% trans 'Region of Interest' %}</h5>
-        <div style="display: inline-flex; width: inherit; justify-content: space-between;">
+        <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <div style="display: inline-flex;">
                     <div class="summary-label" data-bind="text: reportVals.digitalReference.name + ':'"></div>
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
+    <div class="afs-final-step-section">
         <!-- ko foreach: {data: objectAnnotations, as: 'annotation'} -->
         <div data-bind="component: { name: 'views/components/annotation-summary', params: {annotation: annotation}}"></div>
         <!-- /ko -->
