--- a/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
@@ -1,9 +1,9 @@
 {% load i18n %}
 <!-- ko if: loading() === false -->
 <div class="final-step">
-    <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
+    <div class="afs-final-step-section">
         <h5 class="summary-value">{% trans 'Created or Modified Resource Instance' %}</h5>
-        <div style="display: inline-flex; width: inherit; justify-content: space-between;">
+        <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
                     <div class="summary-value" 
@@ -13,9 +13,9 @@
             </div>
         </div>
     </div>
-    <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
+    <div class="afs-final-step-section">
         <h5 class="summary-value">{% trans 'Related Project/Object' %}</h5>
-        <div style="display: inline-flex; width: inherit; justify-content: space-between;">
+        <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <div style="display: inline-flex;">
                     <div class="summary-label" data-bind="text: reportVals.project.name + ':'"></div>
@@ -28,9 +28,9 @@
             </div>
         </div>
     </div>
-    <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
+    <div class="afs-final-step-section">
         <h5 class="summary-value">{% trans 'Observation Details' %}</h5>
-        <div style="display: inline-flex; width: inherit; justify-content: space-between;">
+        <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <div style="display: inline-flex;">
                     <div class="summary-label" data-bind="text: reportVals.usedInstrument.name + ':'"></div>
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
+    <div class="afs-final-step-section">
         <!-- ko foreach: fileLists -->
         <h5 class="summary-value" data-bind="text: digitalResourceName"></h5>
         <div style="display: inline-flex;">
