--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
@@ -12,6 +12,9 @@
                 </a>
             </div>
         </div>
+    </div>
+
+    <div class="afs-final-step-section" style="display: none;">
         <h5 class="summary-value">{% trans 'Regions' %}</h5>
         <!-- ko foreach: regionInstances -->
         <div class="afs-final-step-block">
@@ -25,8 +28,9 @@
         </div>
         <!-- /ko -->
     </div>
+
     <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Region of Interest' %}</h5>
+        <h5 class="summary-value">{% trans 'Region(s) of Interest' %}</h5>
         <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <div style="display: inline-flex;">
