--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
@@ -1,7 +1,5 @@
 
-<div
-    style="padding-bottom: 8px;"
->
+<div class="afs-image-service-instructions" style="padding-bottom: 8px;">
     <p>
         Select an existing image service for your object that you can use to draw the locations of your observations.
         Or upload image(s) to create a new service.
@@ -34,10 +32,7 @@
     <!-- /ko -->
 </div>
 
-<button
-    class="btn btn-success"
-    data-bind="click: openManifestManager, disable: $parent.locked"
->
+<button class="btn btn-success" style="margin-left: 28px;" data-bind="click: openManifestManager, disable: $parent.locked">
     <i class="ion-android-cloud-done"></i>
     <span>
         Create new Image Service
@@ -47,7 +42,7 @@
 <div 
     style="
         position: fixed;
-        top: 50px;
+        top: 70px;
         left: 50px;
         height: calc(100vh - 50px);
         width: calc(100vw - 50px);
