--- a/afs/templates/views/components/workflows/upload-dataset/upload-files-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/upload-files-step.htm
@@ -61,7 +61,7 @@
     <!-- ko if: files().length > 0 -->
     <div style="background-color: white; padding: 45px;">
         <div class="file-workbench-files" style="display: flex; flex-direction: column; height: 485px; border: solid 1px lightgrey; padding: 20px;">
-            <div class="dropzone-photo-upload" style="border: dashed 1px purple; padding: 40px; text-align: center;" data-bind="dropzone: dropzoneOptions">
+            <div class="dropzone-photo-upload" style="background: #fafafa; border: dashed 1px purple; padding: 40px; text-align: center;" data-bind="dropzone: dropzoneOptions">
                 <div class="file-workbench-links">
                     <a class="upload-dataset-files dz-clickable" data-bind="css: uniqueidClass">
                         <span>{% trans "Drag or " %}</span><span class="text-bold">{% trans "click here " %}</span>
