--- a/afs/templates/views/components/workflows/review-dataset/select-dataset.htm
+++ b/afs/templates/views/components/workflows/review-dataset/select-dataset.htm
@@ -4,10 +4,10 @@
 <div style="">
     <div class="upload-dataset-related-widget">
         <h4>Related Datasets</h4>
-        <p>We found the following datasets for the object you selected</p>
+        <p style="padding-left: 26px; margin-top: -5px;">We found the following datasets for the object you selected</p>
     </div>
 
-    <div class="col-xs-12">
+    <div class="col-xs-12" style="padding-left: 30px; margin-top: -40px;">
         <!-- ko if: dataLoaded() === true -->
         <div class="pad-hor columns option-input" data-bind="foreach: relatedDigitalResources">
             <label class="form-checkbox form-normal form-primary form-text" style="overflow: visible;" data-bind="css: {active: $data.selected} ">
