--- a/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
@@ -44,7 +44,7 @@
                     <div class="summary-label" data-bind="text: reportVals.observationName.name + ':'"></div>
                     <div class="summary-value" data-bind="text: reportVals.observationName.value"></div>
                 </div>
-                <div>
+                <div class="pad-top">
                     <div class="summary-label" data-bind="text: reportVals.statement.name + ':'"></div>
                     <div class="summary-value" data-bind="html: reportVals.statement.value"></div>
                 </div>
@@ -53,16 +53,17 @@
     </div>
 
     <div class="afs-final-step-section">
+        <h5 class="summary-value">{% trans 'Files for Upload' %}</h5>
         <!-- ko foreach: fileLists -->
-        <h5 class="summary-value" data-bind="text: digitalResourceName"></h5>
-        <div style="display: inline-flex;">
+        <h5 class="summary-value" style="font-weight: 400; margin-top: -5px; font-size: 14px; padding-bottom: 10px;" data-bind="text: digitalResourceName"></h5>
+        <div style="display: inline-flex; margin-top: -20px">
             <!-- ko if: $parent.hasAnnotatedParts -->
             <div style="border: solid 1px #ddd">
                 <div class="iiif-leaflet" data-bind="leaflet: leafletConfig" style="height: 300px; width: 400px"></div>
             </div>
             <!-- /ko -->
-            <div style="width: 1000px; padding-left: 30px;">
-                <table data-bind="datatable: tableConfig" class="table table-striped table-bordered" width="100%">
+            <div style="width: 100%px; padding-left: 30px;">
+                <table data-bind="datatable: tableConfig" class="table table-striped" style="border-bottom: 1px solid #ddd" width="100%">
                     <thead>
                         <tr>
                             <th>{% trans "File Name:" %}</th>
@@ -78,7 +79,7 @@
                         </tr>
                     <tbody>
                 </table>
-                <div class="final-step-section-block-item">
+                <div class="final-step-section-block-item" style="margin-top: -15px;">
                     <div style="display: inline-flex;">
                         <div class="summary-label">{% trans 'Files: ' %}</div>
                         <div class="summary-value" data-bind="text: fileList().length + '{% trans " files uploaded" %}'"></div>
