updated afs workflow css

--- a/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div style="height: 100%; padding: 10px 24px;">
-    <div style="padding: 5px">
+    <div style="padding: 5px; margin-bottom: 15px;">
         <div class="widget-input-label" style="margin-bottom: 5px;">Instrument*</div>
         <div data-bind="component: {
             name: 'resource-instance-select-widget',
@@ -14,7 +14,7 @@
             }
         }"></div>
     </div>
-    <div style="padding: 5px">
+    <div style="padding: 5px; margin-bottom: 15px;">
         <div class="widget-input-label" style="margin-bottom: 5px;">Procedure Used</div>
         <div data-bind="component: {
             name: 'resource-instance-select-widget',
@@ -28,7 +28,7 @@
             }
         }"></div>
     </div>
-    <div style="padding: 5px">
+    <div style="padding: 5px;">
         <div class="widget-input-label">Instrument Parameters</div>
         <div style="margin-top: -20px;" data-bind="component: {
             name: 'rich-text-widget',
