--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -638,7 +638,7 @@
 }
 
 .workflow-component-based-step-wrapper {
-    padding: 20px 20px 0px 20px;
+    /* padding: 20px 20px 0px 20px; */
 }
 
 /* .workflow-component-based-step-wrapper .widget-input-label {
@@ -651,8 +651,8 @@
 
 .workflow-component-based-step-wrapper .workbench-card-wrapper {
     border-top: none;
-    margin: -20px -20px -20px -20px;
-    height: calc(100% + 20px);
+    /* margin: -20px -20px -20px -20px;
+    height: calc(100% + 20px); */
 }
 
 /* .workflow-component-based-step-wrapper .workbench-card-wrapper .workbench-card-sidepanel {
@@ -684,6 +684,11 @@
 
 .afs-sample-name .control-label, i {
     display: none;
+}
+
+.afs-sample-name input {
+    margin-left: -21px;
+    width: 338px;
 }
 
 .afs-worfklow-summary-table-header {
@@ -720,7 +725,7 @@
 }
 
 .workflow-component-element .row {
-    margin-bottom: 15px !important;
+    /* margin-bottom: 15px !important; */
 }
 
 .afs-experiment-name-block {
@@ -743,4 +748,9 @@
 
 .afs-experiment-name-block input {
     margin-left: -20px;
+}
+
+.afs-workflow-manifest-manager-container .iiif-image-tools div.row:first-child {
+    padding-left: 5px;
+    margin-top: -10px;
 }
