--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
@@ -35,10 +35,10 @@
     </span>
 </button>
 
-<div 
+<div class="afs-workflow-manifest-manager-container"
     style="
         position: fixed;
-        top: 70px;
+        top: 50px;
         left: 50px;
         height: calc(100vh - 50px);
         width: calc(100vw - 50px);
