--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -11,15 +11,14 @@
 {% endblock workbench %}
 
 {% block tabs %}
-<div class="workbench-card-sidebar-tab" data-bind="click: function() {
-    toggleTab('dataset');
-}, css: {
-    'active': activeTab() === 'dataset'
-}">
-    <i class="fa fa-file"></i>
-    <span class="map-sidebar-text">{% trans 'Dataset' %}</span>
-</div>
-
+    <div class="workbench-card-sidebar-tab" data-bind="click: function() {
+        toggleTab('dataset');
+    }, css: {
+        'active': activeTab() === 'dataset'
+    }">
+        <i class="fa fa-file"></i>
+        <span class="map-sidebar-text">{% trans 'Dataset' %}</span>
+    </div>
 {{ block.super }}
 
 {% endblock tabs %}
@@ -347,7 +346,7 @@
                         <!-- BEGIN sample description -->
                             <h5 class="analysis-areas-annotation-step-widget-title">{% trans 'Sample Description' %}</h5>
 
-                            <div 
+                            <div style="margin-left: -21px; margin-top: -18px;"
                                 data-bind='
                                     component: {
                                         name: "rich-text-widget",
