--- a/afs/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
@@ -45,10 +45,10 @@
         }"></div>
     </div>
     <div style="padding: 5px">
-        <div style="color:#2b547c; cursor: pointer;" data-bind="click: function(){showName(!showName())}, text: showName() ? 'Hide sampling activity name' : 'Show sampling activity name'"></div>
+        <div style="color:#2b547c; cursor: pointer; padding-left: 20px;" data-bind="click: function(){showName(!showName())}, text: showName() ? 'Hide sampling activity name' : 'Show sampling activity name'"></div>
         <div data-bind="visible: showName">
             <div class="widget-input-label" style="display: none;">Sampling Activity Name</div>
-            <div style="margin: -3px -5px;" data-bind="component: {
+            <div style="margin: -20px -5px 20px -5px;" data-bind="component: {
                 name: 'text-widget',
                 params: {
                     renderContext: 'workflow', 
