finished first draft of observations, physical things, and instruments

--- a/afs/templates/views/components/reports/instrument.htm
+++ b/afs/templates/views/components/reports/instrument.htm
@@ -65,8 +65,8 @@
                     name: 'views/components/reports/scenes/existence',
                     params: {
                         data: resource,
-                        cards: existenceCards
-
+                        cards: existenceCards,
+                        dataConfig: existenceDataConfig
                     }
                 }"></div>
             </div>
@@ -77,7 +77,7 @@
                     params: {
                         data: resource,
                         cards: substanceCards
-
+                        
                     }
                 }"></div>
             </div>
