Add substance to textual work

--- a/afs/templates/views/components/reports/textual-work.htm
+++ b/afs/templates/views/components/reports/textual-work.htm
@@ -71,6 +71,15 @@
                     }
                 }"></div>
             </div>
+            <!-- Substance Tab -->
+            <div class="afs-report-page" data-bind="if: activeSection() === 'substance'">
+                <div data-bind="component: {
+                    name: 'views/components/reports/scenes/default',
+                    params: {
+                        data: substanceData,
+                    }
+                }"></div>
+            </div>
         </div>
     </div>
 
